Redmine Issue 863 PURPOSE: Browse Specimens Styling DESCRIPTION:  text truncate container

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2357,7 +2357,15 @@ h3.line-clamp {
   direction: rtl;
   text-align: left;
 }
-
+.text-truncate-container {
+    width: 250px;
+}
+.text-truncate-container a {
+    -webkit-line-clamp: 3;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
 
 
 
